--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@ body {
 form {
   padding: 20px;
 }
-
+.overview {
+  padding-left: 30px;
+}
 .weatherApp-wrapper {
   max-width: 600px;
   margin: 30px auto;
@@ -13,12 +15,12 @@ form {
 .weatherApp {
   padding: 17px;
   border: 1px solid #bdc2fa;
-  width: 36rem;
+  width: 44rem;
   box-shadow: 15px 15px 15px darkgray;
   background: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
   border-radius: 30px;
 }
-#city {
+#city-input {
   border-radius: 30px;
   border: 2px solid #24527a;
 }
@@ -40,6 +42,9 @@ ul {
   padding: 0;
   list-style: none;
 }
+.dhw {
+  padding-left: 20px;
+}
 li {
   display: block;
   font-size: 20px;
@@ -50,12 +55,16 @@ li {
 .bigemoji {
   font-size: 55px;
 }
-.bigTemp {
-  font-size: 28px;
+.temperature {
+  font-size: 36px;
+  text-align: center;
+}
+.weather-forecast-temperature-min {
+  opacity: 0.5;
 }
 #°c,
 #°f {
-  font-size: 20px;
+  font-size: 25px;
 }
 
 .card {
@@ -64,6 +73,10 @@ li {
   top: 0;
   width: fit-content;
 }
+.col-2 {
+  width: 112px;
+}
+
 .card-text {
   text-align: center;
 }
@@ -72,9 +85,7 @@ li {
   font-size: 45px;
   text-align: center;
 }
-.temp {
-  text-align: center;
-}
+
 .card-body {
   width: 90px;
   height: 120px;
